adding the possibilities to edit the metadata